--- a/journal.html
+++ b/journal.html
@@ -276,7 +276,7 @@
           </div>
           <div class="page right-half">
             <div class="text">
-              <div class="date-header">🗝️ August 29, 2025 — Second Date: The Dustbin</div>
+              <div class="date-header">🗝️ August 29, 2025 — Second Date:</div>
               <div class="story-text">The escape room was the most fun I've ever had, even though we didn't get out of the room. I had more fun solving it than any other time I went there. The real highlight? Later at MKT, you'd eat a little of whatever we bought and pass the rest to me. I actually loved that you were treating me as your **personal dustbin**.</div>
             </div>
             <div class="page-number">3</div>
@@ -297,7 +297,7 @@
           </div>
           <div class="page right-half">
             <div class="text">
-              <div class="date-header">👻 September 14, 2025 — Third Date: Too Scared to Bully</div>
+              <div class="date-header">👻 September 14, 2025 — Third Date:</div>
               <div class="story-text">We watched *The Conjuring*. I planned to scare you, but you were already so terrified, you were already so far into your chair so I thought, "ok, let's not do any further damage." I had more fun watching you get scared than the movie! Later, whatever we were planning fell apart—tried go-karting (too much of a line), tried a restaurant (couldn't find one). I was getting really worried you might be frustrated, but when I looked at you, I realized none of it was irritating you, and I was just amazed. You are just **too good, absolutely perfect**. P.S. We finally ended up eating a very random McDonald's.</div>
             </div>
             <div class="page-number">4</div>
@@ -320,7 +320,7 @@
           </div>
           <div class="page right-half">
             <div class="text">
-              <div class="date-header">🧸 September 29, 2025 — Fourth Date: Claw Machine Happiness</div>
+              <div class="date-header">🧸 September 29, 2025 — Fourth Date:</div>
                <div class="story-text">We watched *Lilo and Stitch* (still incomplete!) and you beat me unfairly at air hockey (you know my score was not going up, I hit more of them than you, you have to agree). Meeting your friends at Galaxy Pizza made me so tense—I was biting my nails constantly. But even in my awkward state, just looking at how happy you were about me putting in this effort made it all worth it. Later, you beat me in that bike race game unfairly again (you know I drove perfectly). Then, I won the bear from the claw machine on my first try! The happiness on your face made me so happyyyy.</div>
             </div>
             <div class="page-number">5</div>
@@ -338,7 +338,7 @@
           </div>
           <div class="page right-half">
             <div class="text">
-              <div class="date-header">😴 October 5, 2025 — Fifth Date: Sleep vs. Me</div>
+              <div class="date-header">😴 October 5, 2025 — Fifth Date:</div>
                <div class="story-text">You came to see the Shinchan movie after clubbing the whole night. Knowing how much you value sleep, I was so **honoured** you chose to spend the day with me. You were tired and had a headache, but you tried so hard not to let it ruin the date. That effort was so cuteee. (Also, you finally told me you kinda liked me on October 9th!)</div>
             </div>
             <div class="media">
@@ -378,7 +378,7 @@
           </div>
           <div class="page right-half">
             <div class="text">
-              <div class="date-header">🏁 October 17, 2025 — The Requirement</div>
+              <div class="date-header">🏁 October 17, 2025 sixth date</div>
                <div class="story-text">We went go-karting where I let you win (for the betterment of both of us, since you drive rashly when you’re losing!), then to Theos (my favorite!). Then we went to another mystery room—why do we go to so many of them, we are not even that smart! At the end of the date I was sad knowing I wouldn't see you for two weeks. But as you were leaving you saw my sadness and finally said, "**Ok, we are in a relationship right now, but I expect a proper proposal**." I will never forget these wordsss, neverrr. This whole journal is the proper proposal!</div>
             </div>
             <div class="page-number">8</div>
